# gads

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_monkey.glb
config/: agents.yaml  default.yaml
docs/: README-template.md  cli-reference.md  configuration.md  e2e_testing.md  index.md  phase3-ux-todos.md  pipelines.md  quickstart.md  tools-reference.md
docs/archive/: README.md  art_director.py  blender_hyper3d.py  stable_diffusion.py
prompts/: architect.md  art_director.md  designer.md  developer.md  developer_2d.md  developer_3d.md  qa.md
src/: __init__.py  cli.py  main.py
src/agents/: __init__.py  architect.py  art_director.py  designer.py  developer.py  factory.py
src/gads/: __init__.py  cli.py  main.py
src/gads/agents/: __init__.py  architect.py  base.py  designer.py  developer_2d.py  developer_3d.py  factory.py  qa.py
src/gads/archive/asset_pipeline/: README.md
src/gads/archive/asset_pipeline/agents/: art_director.py
src/gads/archive/asset_pipeline/tools/: hyper3d_rodin.py  stable_diffusion.py
src/gads/orchestrator/: __init__.py  core.py  registry.py  router.py  session.py
src/gads/tools/: __init__.py  blender_mcp.py  godot.py  stable_diffusion.py
src/gads/utils/: config.py  logging.py
src/orchestrator/: __init__.py  core.py  orchestrator.py  pipeline.py  router.py  session.py
src/tools/: blender_mcp.py  stable_diffusion.py
src/utils/: __init__.py
templates/godot/: project.godot.j2
templates/pipelines/: prototype.yaml
tests/: __init__.py  conftest.py  health_check.py  quick_test.py  test_agents.py  test_e2e_ollama.py  test_factory.py  test_godot_tool.py  test_orchestrator.py  test_router.py  test_tools.py  verify_pipeline.py
